# tree-sitter-fga

./: .gitattributes  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  justfile  libtree-sitter-fga.dylib  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter-fga.pc  tree-sitter.json
.github/workflows/: ci.yaml  fuzz.yaml  lint.yaml  release.yaml
bindings/c/: tree-sitter-fga.pc.in
bindings/c/tree_sitter/: tree-sitter-fga.h
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_fga/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterFgaTests/: TreeSitterFgaTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: gdrive.txt  github.txt  ip_based_access.txt  module.txt  module_file.txt  temporal_access.txt  test.txt
